--- a/記帳/記帳.csproj
+++ b/記帳/記帳.csproj
@@ -82,10 +82,12 @@
     </Compile>
     <Compile Include="Forms\SingletonForm.cs" />
     <Compile Include="Models\Enums\FormType.cs" />
+    <Compile Include="Models\ImagePath.cs" />
     <Compile Include="Models\ModelTypes\ModelTypes.cs" />
     <Compile Include="Models\Record.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ImageCompress.cs" />
     <EmbeddedResource Include="Components\NavBar.resx">
       <DependentUpon>NavBar.cs</DependentUpon>
     </EmbeddedResource>
