--- a/記帳/記帳.csproj
+++ b/記帳/記帳.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Models\Record.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\CsvService.cs" />
     <Compile Include="Utils\Debounce.cs" />
     <Compile Include="Utils\ImageCompress.cs" />
     <EmbeddedResource Include="Components\NavBar.resx">
