--- a/記帳/記帳.csproj
+++ b/記帳/記帳.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\CsvService.cs" />
     <Compile Include="Service\DataGroupByService.cs" />
+    <Compile Include="Utils\DateUtils.cs" />
     <Compile Include="Utils\PathUtils.cs" />
     <Compile Include="Utils\Debounce.cs" />
     <Compile Include="Utils\ImageCompress.cs" />
